--- a/style.css
+++ b/style.css
@@ -156,9 +156,9 @@ main {
   border-radius:
     var(--topLeft, 0)
     var(--topRight, 0)
-    var(--bottomLeft, 0)
-    var(--bottomRight, 0);
-  transition: border-radius var(--transition);
+    var(--bottomRight, 0)
+    var(--bottomLeft, 0);
+    transition: border-radius var(--transition);
 }
 
 .title {
